--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,15 +19,17 @@ tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = "0.29"
-scale-value = "0.10.0"
+subxt = {version = "0.32" , features = ["substrate-compat"]}
+scale-value = "0.12.0"
 
 # substrate
-frame-election-provider-support = { git = "https://github.com/paritytech/substrate" }
-pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate" }
-sp-npos-elections = { git = "https://github.com/paritytech/substrate" }
-frame-support = { git = "https://github.com/paritytech/substrate" }
-sp-runtime = { git = "https://github.com/paritytech/substrate" }
+frame-election-provider-support = { git = "https://github.com/gear-tech/substrate" , branch = "gear-polkadot-v0.9.41-canary-no-sandbox"}
+pallet-election-provider-multi-phase = { git = "https://github.com/gear-tech/substrate", branch = "gear-polkadot-v0.9.41-canary-no-sandbox" }
+sp-npos-elections = { git = "https://github.com/gear-tech/substrate", branch = "gear-polkadot-v0.9.41-canary-no-sandbox" }
+frame-support = { git = "https://github.com/gear-tech/substrate", branch = "gear-polkadot-v0.9.41-canary-no-sandbox" }
+sp-runtime = { git = "https://github.com/gear-tech/substrate",branch = "gear-polkadot-v0.9.41-canary-no-sandbox" }
+
+gsdk = {path = "../gear/gsdk"}
 
 # prometheus
 prometheus = "0.13"
@@ -37,7 +39,7 @@ once_cell = "1.18"
 [dev-dependencies]
 anyhow = "1"
 assert_cmd = "2.0"
-sp-storage = { git = "https://github.com/paritytech/substrate" }
+sp-storage = { git = "https://github.com/gear-tech/substrate", branch = "gear-polkadot-v0.9.41-canary-no-sandbox"}
 regex = "1"
 
 [features]
